fix：campaign-cardの階層を落とす

--- a/src/index.html
+++ b/src/index.html
@@ -281,106 +281,114 @@
         </div>
         <div class="swiper campaign__swiper js-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
-            <div class="swiper-slide campaign-cards__card campaign-card">
-              <div class="campaign-card__img">
-                <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
-              </div>
-              <div class="campaign-card__body">
-                <div class="campaign-card__category">
-                  <p class="campaign-card__category-text">ライセンス講習</p>
+            <div class="swiper-slide campaign-cards__card">
+              <div class="campaign-card">
+                <div class="campaign-card__img">
+                  <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
                 </div>
-                <div class="campaign-card__title title-line">
-                  <p class="campaign-card__title-text text">ライセンス取得</p>
-                </div>
-              </div>
-              <div class="campaign-card__foot">
-                <div class="campaign-card__offer">
-                  <p>全部コミコミ(お一人様)</p>
-                </div>
-                <div class="campaign-card__wrap">
-                  <div class="campaign-card__original-price">
-                    <p class="campaign-card__original-price-text">¥56,000</p>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__category">
+                    <p class="campaign-card__category-text">ライセンス講習</p>
                   </div>
-                  <div class="campaign-card__sale-price">
-                    <p class="campaign-card__sale-price-text">¥46,000</p>
+                  <div class="campaign-card__title title-line">
+                    <p class="campaign-card__title-text text">ライセンス取得</p>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="swiper-slide campaign-cards__card campaign-card">
-              <div class="campaign-card__img">
-                <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
-              </div>
-              <div class="campaign-card__body">
-                <div class="campaign-card__category">
-                  <p class="campaign-card__category-text">体験ダイビング</p>
-                </div>
-                <div class="campaign-card__title  title-line">
-                  <p class="campaign-card__title-text text">貸切体験ダイビング</p>
-                </div>
-              </div>
-              <div class="campaign-card__foot">
-                <div class="campaign-card__offer">
-                  <p>全部コミコミ(お一人様)</p>
-                </div>
-                <div class="campaign-card__wrap">
-                  <div class="campaign-card__original-price">
-                    <p class="campaign-card__original-price-text">¥24,000</p>
+                <div class="campaign-card__foot">
+                  <div class="campaign-card__offer">
+                    <p>全部コミコミ(お一人様)</p>
                   </div>
-                  <div class="campaign-card__sale-price">
-                    <p class="campaign-card__sale-price-text">¥18,000</p>
+                  <div class="campaign-card__wrap">
+                    <div class="campaign-card__original-price">
+                      <p class="campaign-card__original-price-text">¥56,000</p>
+                    </div>
+                    <div class="campaign-card__sale-price">
+                      <p class="campaign-card__sale-price-text">¥46,000</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="swiper-slide campaign-cards__card campaign-card">
-              <div class="campaign-card__img">
-                <img src="./assets/images/common/campaign_3.jpg" alt="水中を漂う多数のクラゲ">
-              </div>
-              <div class="campaign-card__body">
-                <div class="campaign-card__category">
-                  <p class="campaign-card__category-text">体験ダイビング</p>
+            <div class="swiper-slide campaign-cards__card">
+              <div class="campaign-card">
+                <div class="campaign-card__img">
+                  <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
                 </div>
-                <div class="campaign-card__title  title-line">
-                  <p class="campaign-card__title-text text">ナイトダイビング</p>
-                </div>
-              </div>
-              <div class="campaign-card__foot">
-                <div class="campaign-card__offer">
-                  <p>全部コミコミ(お一人様)</p>
-                </div>
-                <div class="campaign-card__wrap">
-                  <div class="campaign-card__original-price">
-                    <p class="campaign-card__original-price-text">¥10,000</p>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__category">
+                    <p class="campaign-card__category-text">体験ダイビング</p>
                   </div>
-                  <div class="campaign-card__sale-price">
-                    <p class="campaign-card__sale-price-text">¥8,000</p>
+                  <div class="campaign-card__title  title-line">
+                    <p class="campaign-card__title-text text">貸切体験ダイビング</p>
+                  </div>
+                </div>
+                <div class="campaign-card__foot">
+                  <div class="campaign-card__offer">
+                    <p>全部コミコミ(お一人様)</p>
+                  </div>
+                  <div class="campaign-card__wrap">
+                    <div class="campaign-card__original-price">
+                      <p class="campaign-card__original-price-text">¥24,000</p>
+                    </div>
+                    <div class="campaign-card__sale-price">
+                      <p class="campaign-card__sale-price-text">¥18,000</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="swiper-slide campaign-cards__card campaign-card">
-              <div class="campaign-card__img">
-                <img src="./assets/images/common/campaign_4.jpg" alt="ダイバーの集団が海で浮かんでいる様子">
-              </div>
-              <div class="campaign-card__body">
-                <div class="campaign-card__category">
-                  <p class="campaign-card__category-text">ファンダイビング</p>
+            <div class="swiper-slide campaign-cards__card">
+              <div class="campaign-card">
+                <div class="campaign-card__img">
+                  <img src="./assets/images/common/campaign_3.jpg" alt="水中を漂う多数のクラゲ">
                 </div>
-                <div class="campaign-card__title  title-line">
-                  <p class="campaign-card__title-text text">貸切ファンダイビング</p>
-                </div>
-              </div>
-              <div class="campaign-card__foot">
-                <div class="campaign-card__offer">
-                  <p>全部コミコミ(お一人様)</p>
-                </div>
-                <div class="campaign-card__wrap">
-                  <div class="campaign-card__original-price">
-                    <p class="campaign-card__original-price-text">¥20,000</p>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__category">
+                    <p class="campaign-card__category-text">体験ダイビング</p>
                   </div>
-                  <div class="campaign-card__sale-price">
-                    <p class="campaign-card__sale-price-text">¥16,000</p>
+                  <div class="campaign-card__title  title-line">
+                    <p class="campaign-card__title-text text">ナイトダイビング</p>
+                  </div>
+                </div>
+                <div class="campaign-card__foot">
+                  <div class="campaign-card__offer">
+                    <p>全部コミコミ(お一人様)</p>
+                  </div>
+                  <div class="campaign-card__wrap">
+                    <div class="campaign-card__original-price">
+                      <p class="campaign-card__original-price-text">¥10,000</p>
+                    </div>
+                    <div class="campaign-card__sale-price">
+                      <p class="campaign-card__sale-price-text">¥8,000</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide campaign-cards__card">
+              <div class="campaign-card">
+                <div class="campaign-card__img">
+                  <img src="./assets/images/common/campaign_4.jpg" alt="ダイバーの集団が海で浮かんでいる様子">
+                </div>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__category">
+                    <p class="campaign-card__category-text">ファンダイビング</p>
+                  </div>
+                  <div class="campaign-card__title  title-line">
+                    <p class="campaign-card__title-text text">貸切ファンダイビング</p>
+                  </div>
+                </div>
+                <div class="campaign-card__foot">
+                  <div class="campaign-card__offer">
+                    <p>全部コミコミ(お一人様)</p>
+                  </div>
+                  <div class="campaign-card__wrap">
+                    <div class="campaign-card__original-price">
+                      <p class="campaign-card__original-price-text">¥20,000</p>
+                    </div>
+                    <div class="campaign-card__sale-price">
+                      <p class="campaign-card__sale-price-text">¥16,000</p>
+                    </div>
                   </div>
                 </div>
               </div>
