fix：__text-textのクラス名を修正

--- a/src/index.html
+++ b/src/index.html
@@ -431,9 +431,9 @@
           <div class="about__subtitle">
             <p class="about__subtitle-text">Dive&nbsp;into<br>the&nbsp;Ocean</p>
           </div>
-          <div class="about__wrap">
-            <div class="about__text">
-              <p class="about__text-text text">
+          <div class="about__body">
+            <div class="about__text-wrap">
+              <p class="about__text text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
@@ -465,8 +465,8 @@
             <div class="info__subtitle title-line">
               <h3 class="info__subtitle-text">ライセンス講習</h3>
             </div>
-            <div class="info__text">
-              <p class="info__text-text text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br>
+            <div class="info__text-wrap">
+              <p class="info__text text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br>
                 正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。</p>
             </div>
             <div class="info__btn">
@@ -496,8 +496,8 @@
                 <div class="blog-card__title title-line">
                   <h3 class="blog-card__title-text">ライセンス取得</h3>
                 </div>
-                <div class="blog-card__text">
-                  <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                <div class="blog-card__text-wrap">
+                  <p class="blog-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </div>
@@ -513,8 +513,8 @@
                 <div class="blog-card__title title-line">
                   <h3 class="blog-card__title-text">ウミガメと泳ぐ</h3>
                 </div>
-                <div class="blog-card__text">
-                  <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                <div class="blog-card__text-wrap">
+                  <p class="blog-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </div>
@@ -530,8 +530,8 @@
                 <div class="blog-card__title title-line">
                   <h3 class="blog-card__title-text">カクレクマノミ</h3>
                 </div>
-                <div class="blog-card__text">
-                  <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                <div class="blog-card__text-wrap">
+                  <p class="blog-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </div>
@@ -575,8 +575,8 @@
               </div>
             </div>
             <div class="voice-card__body">
-              <div class="voice-card__text">
-                <p class="voice-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+              <div class="voice-card__text-wrap">
+                <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。
                 </p>
@@ -605,8 +605,8 @@
               </div>
             </div>
             <div class="voice-card__body">
-              <div class="voice-card__text">
-                <p class="voice-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+              <div class="voice-card__text-wrap">
+                <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。
                 </p>
