fix：footer snsの階層を修正

--- a/src/index.html
+++ b/src/index.html
@@ -751,20 +751,18 @@
             <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </div>
-        <div class="footer__sns">
-          <div class="footer__sns-items">
-            <div class="footer__sns-item">
-              <a href="#" class="footer__sns-link" aria-label="" target="_blank">
-                <img src="./assets/images/common/icon-facebook.svg" alt="フェイスブックのアイコン">
-              </a>
-            </div>
-            <div class="footer__sns-item">
-              <a href="#" class="footer__sns-link" aria-label="" target="_blank">
-                <img src="./assets/images/common/icon-instagram.svg" alt="インスタグラムのアイコン">
-              </a>
-            </div>
-          </div>
-        </div>
+        <ul class="footer__sns-list">
+          <li class="footer__sns-item">
+            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+              <img src="./assets/images/common/icon-facebook.svg" alt="フェイスブックのアイコン">
+            </a>
+          </li>
+          <li class="footer__sns-item">
+            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+              <img src="./assets/images/common/icon-instagram.svg" alt="インスタグラムのアイコン">
+            </a>
+          </li>
+        </ul>
       </div>
       <nav class="footer__footer-nav footer-nav">
         <div class="footer-nav__wrap">
