fix：footerの不要なクラス名を削除

--- a/src/index.html
+++ b/src/index.html
@@ -768,7 +768,7 @@
         <div class="footer-nav__wrap">
           <div class="footer-nav__menu-items menu">
             <div class="menu__column-wrap">
-              <div class="footer-nav__menu-item menu__column">
+              <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#campaign">キャンペーン</a>
@@ -785,7 +785,7 @@
                   </div>
                 </div>
               </div>
-              <div class="footer-nav__menu-item menu__column">
+              <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#info">ダイビング情報</a>
@@ -804,7 +804,7 @@
               </div>
             </div>
             <div class="menu__column-wrap">
-              <div class="footer-nav__menu-item menu__column">
+              <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#voice">お客様の声</a>
@@ -821,7 +821,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="footer-nav__menu-item menu__column">
+              <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#">よくある質問</a>
