fix：contactのタイトルをmodifierで実装

--- a/src/index.html
+++ b/src/index.html
@@ -718,7 +718,7 @@
             </div>
           </div>
           <div class="contact__bottom">
-            <div class="contact__section-title section-title">
+            <div class="contact__section-title section-title section-title--contact">
               <p class="section-title__eng">Contact</p>
               <h2 class="section-title__ja">お問い合わせ</h2>
             </div>
