fix：heroTitleの不要なdivを削除

--- a/src/index.html
+++ b/src/index.html
@@ -219,12 +219,8 @@
         <div class="loading__right"></div>
       </div>
       <div class="loading__header heroTitle">
-        <div class="heroTitle__title">
-          <p>diving</p>
-        </div>
-        <div class="heroTitle__subtitle">
-          <p>into the ocean</p>
-        </div>
+        <p class="heroTitle__title">diving</p>
+        <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
 
@@ -262,12 +258,8 @@
             </div>
           </div>
           <div class="mv__header heroTitle">
-            <div class="heroTitle__title">
-              <p>diving</p>
-            </div>
-            <div class="heroTitle__subtitle">
-              <p>into the ocean</p>
-            </div>
+            <p class="heroTitle__title">diving</p>
+            <p class="heroTitle__subtitle">into the ocean</p>
           </div>
         </div>
       </div>
