--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -224,24 +224,30 @@
       </div>
     </div>
 
-    <div class="sub-mv sub-mv--page-thanks">
+    <div class="sub-mv sub-mv--page-contact">
       <div class="sub-mv__title">
-        <h1>Template</h1>
+        <h1>Contact</h1>
       </div>
     </div>
 
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
-        <div>TOP > お問い合わせ > 送信完了</div>
+        <div>TOP > ブログ一覧</div>
       </div>
     </div>
 
-    <section class="sub-mv layout-sub-xxx">
-      <div class="sub-mv__inner inner">
-
+    <div id="page-thanks" class="page-thanks layout-page-thanks">
+      <div class="page-thanks__inner inner">
+        <p class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</p>
+        <p class="page-thanks__sub-text text-p">
+          このたびは、お問い合わせ頂き<br class="u-mobile">誠にありがとうございます。<br>
+          お送り頂きました内容を確認の上、<br class="u-mobile">
+          3営業日以内に折り返しご連絡させて頂きます。<br>
+          また、ご記入頂いたメールアドレスへ、<br class="u-mobile">
+          自動返信の確認メールをお送りしております。</p>
       </div>
-    </section>
+    </div>
 
     <section class="contact layout-contact">
       <div class="contact__inner inner">
