fix：サンクスページ、404

--- a/src/404.html
+++ b/src/404.html
@@ -239,7 +239,7 @@
             <h1 class="error-page__title">お探しのページが見つかりません。</h1>
           </div>
           <div class="error-page__btn">
-            <a href="#" class="button button--white">
+            <a href="/" class="button button--white">
               <p>Page TOP</p>
             </a>
           </div>
