temp：sub-about：上部ピクパ完了

--- a/src/page-sub-about.html
+++ b/src/page-sub-about.html
@@ -258,7 +258,7 @@
             <div class="about__subtitle about__subtitle--sub-page">
               <p class="about__subtitle-text about__subtitle-text--sub-page">Dive&nbsp;into<br>the&nbsp;Ocean</p>
             </div>
-            <div class="about__body">
+            <div class="about__body about__body--sub-page">
               <div class="about__text-wrap">
                 <p class="about__text text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
