--- a/src/page-sub-about.html
+++ b/src/page-sub-about.html
@@ -262,7 +262,7 @@
               <div class="about__text-wrap">
                 <p class="about__text text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 </p>
               </div>
             </div>
@@ -275,47 +275,29 @@
           </div>
           <ul class="sub-about__list">
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_1.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_1.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_1.jpg" alt="">
             </li>
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_2.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_2.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_2.jpg" alt="">
             </li>
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_3.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_3.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_3.jpg" alt="">
             </li>
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_4.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_4.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_4.jpg" alt="">
             </li>
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_5.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_5.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_5.jpg" alt="">
             </li>
             <li class="sub-about__item">
-              <picture>
-                <source srcset="./assets/images/sub/about_pc_6.jpg" media="(min-width:768px)">
-                <img src="./assets/images/sub/about_sp_6.jpg" alt="">
-              </picture>
+              <img src="./assets/images/sub/about_6.jpg" alt="">
             </li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section class="contact layout-contact">
+    <section class="contact layout-contact layout-contact--sub-about">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
