--- a/src/page-sub-about.html
+++ b/src/page-sub-about.html
@@ -274,25 +274,26 @@
             <h2 class="section-title__ja">フォト</h2>
           </div>
           <ul class="sub-about__list">
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_1.jpg" alt="">
             </li>
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_2.jpg" alt="">
             </li>
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_3.jpg" alt="">
             </li>
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_4.jpg" alt="">
             </li>
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_5.jpg" alt="">
             </li>
-            <li class="sub-about__item">
+            <li class="sub-about__item js-modal">
               <img src="./assets/images/sub/about_6.jpg" alt="">
             </li>
           </ul>
+          <div class="sub-about__modal-background js-modal-background"></div>
         </div>
       </div>
     </section>
