--- a/src/page-price.html
+++ b/src/page-price.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--page-price">
+    <div class="sub-mv sub-mv--sub-price">
       <div class="sub-mv__title">
         <h1>Price</h1>
       </div>
@@ -241,13 +241,13 @@
           <ul class="sub-price__list">
             <li class="sub-price__item">
               <div class="sub-price__header">
+                <h2 class="sub-price__heading">ライセンス講習</h2>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.jpg" alt="">
+                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
                   </picture>
                 </div>
-                <h2 class="sub-price__heading">ライセンス講習</h2>
               </div>
               <dl class="sub-price__table">
                 <dt>オープンウォーター<br class="u-mobile">ダイバーコース</dt>
@@ -260,13 +260,13 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
+                <h2 class="sub-price__heading">体験ダイビング</h2>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.jpg" alt="">
+                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
                   </picture>
                 </div>
-                <h2 class="sub-price__heading">体験ダイビング</h2>
               </div>
               <dl class="sub-price__table">
                 <dt>ビーチ体験ダイビング<br class="u-mobile">(半日)</dt>
@@ -281,13 +281,13 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
+                <h2 class="sub-price__heading">ファンダイビング</h2>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.jpg" alt="">
+                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
                   </picture>
                 </div>
-                <h2 class="sub-price__heading">ファンダイビング</h2>
               </div>
               <dl class="sub-price__table">
                 <dt>ビーチダイビング<br class="u-mobile">(2ダイブ)</dt>
@@ -302,13 +302,13 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
+                <h2 class="sub-price__heading">スペシャルダイビング</h2>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.jpg" alt="">
+                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
                   </picture>
                 </div>
-                <h2 class="sub-price__heading">スペシャルダイビング</h2>
               </div>
               <dl class="sub-price__table">
                 <dt>貸切ダイビング<br class="u-mobile">(2ダイブ)</dt>
@@ -324,7 +324,7 @@
       </div>
     </div>
 
-    <section class="contact layout-sub-contact">
+    <section class="contact layout-sub-contact layout-sub-contact--sub-price">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
