fix：魚のあしらいを共通クラス化

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <section id="sub-campaign" class="sub-campaign layout-sub-campaign">
+    <section id="sub-campaign" class="sub-campaign layout-sub-campaign decoration-fish">
       <div class="sub-campaign__inner inner">
         <div class="category">
           <ul class="category__list">
