--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <div id="sub-voice" class="sub-voice layout-sub-voice">
+    <div id="sub-voice" class="sub-voice layout-sub-voice decoration-fish">
       <div class="sub-voice__inner inner">
         <div class="category">
           <ul class="category__list">
