--- a/src/home.html
+++ b/src/home.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="sub-blog" class="sub-blog layout-sub-blog">
+    <div id="sub-blog" class="sub-blog layout-sub-blog decoration-fish">
       <div class="sub-blog__inner inner">
         <div class="sub-blog__container">
           <div class="sub-blog__main">
