--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="privacy" class="privacy layout-privacy">
+    <div id="privacy" class="privacy layout-privacy decoration-fish">
       <div class="privacy__inner inner">
         <div class="site-policy">
           <h2 class="site-policy__title">プライバシーポリシー</h2>
@@ -259,7 +259,9 @@
             <div class="site-policy__text-paragraph">
               <ul>
                 <li>お客様からのお問い合わせやサポートの提供</li>
-                <li>当社のサービスや製品の提供 ・当社のサイトの改善や新しいサービスの開発 ・法律や規制に基づく義務の履行</li>
+                <li>当社のサービスや製品の提供</li>
+                <li>当社のサイトの改善や新しいサービスの開発</li>
+                <li>法律や規制に基づく義務の履行</li>
               </ul>
               <ol>
                 <li><span>情報の共有</span>当社は、お客様から収集した個人情報を、以下の場合に限り第三者に提供することがあります。</li>
@@ -267,7 +269,9 @@
             </div>
             <div class="site-policy__text-paragraph">
               <ul>
-                <li>お客様の同意がある場合 ・法律や規制に基づく場合 ・当社が信頼できると判断した業務委託先に必要な範囲で提供する場合</li>
+                <li>お客様の同意がある場合</li>
+                <li>法律や規制に基づく場合</li>
+                <li>当社が信頼できると判断した業務委託先に必要な範囲で提供する場合</li>
               </ul>
               <ol>
                 <li><span>セキュリティ</span>当社は、お客様の個人情報を適切に保護するために、適切な安全対策を講じます。個人情報への不正アクセス、紛失、改ざん、漏洩等を防止するための措置を講じます。</li>
