--- a/src/page-sub-about.html
+++ b/src/page-sub-about.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <section class="sub-about layout-sub-about">
+    <section class="sub-about layout-sub-about decoration-fish">
       <div class="sub-about__inner inner">
         <div class="sub-about__about about">
           <div class="about__images">
