--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="terms-of-service" class="terms-of-service layout-terms-of-service">
+    <div id="terms-of-service" class="terms-of-service layout-terms-of-service decoration-fish">
       <div class="terms-of-service__inner inner">
         <div class="site-policy">
           <h2 class="site-policy__title">利用規約</h2>
