--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <div id="page-thanks" class="page-thanks layout-page-thanks">
+    <div id="page-thanks" class="page-thanks layout-page-thanks decoration-fish">
       <div class="page-thanks__inner inner">
         <p class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</p>
         <p class="page-thanks__sub-text text-p">
