--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="faq" class="faq layout-faq">
+    <div id="faq" class="faq layout-faq decoration-fish">
       <div class="faq__inner inner">
         <div class="faq__accordion">
           <div class="accordion js-accordion">
