--- a/src/page-price.html
+++ b/src/page-price.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="sub-price" class="sub-price layout-sub-price">
+    <div id="sub-price" class="sub-price layout-sub-price decoration-fish">
       <div class="sub-price__inner inner">
         <div class="sub-price__content">
           <ul class="sub-price__list">
