--- a/src/index.html
+++ b/src/index.html
@@ -67,19 +67,19 @@
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="/page-sub-about.html">私たちについて</a>
+                      <a href="/page-about.html">私たちについて</a>
                     </div>
                   </div>
                 </div>
                 <div class="menu__column">
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="/page-sub-info.html">ダイビング情報</a>
+                      <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-sub-info.html">ライセンス講習</a></li>
-                      <li><a href="/page-sub-info.html">体験ダイビング</a></li>
-                      <li><a href="/page-sub-info.html">ファンダイビング</a></li>
+                      <li><a href="/page-info.html">ライセンス講習</a></li>
+                      <li><a href="/page-info.html">体験ダイビング</a></li>
+                      <li><a href="/page-info.html">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
@@ -150,7 +150,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="/page-sub-about.html">
+            <a href="/page-about.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">About us</p>
                 <p class="pc-nav__ja">私たちについて</p>
@@ -158,7 +158,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="/page-sub-info.html">
+            <a href="/page-info.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Information</p>
                 <p class="pc-nav__ja">ダイビング情報</p>
@@ -392,7 +392,7 @@
           <div class="swiper-button-next campaign__button-next"></div>
         </div>
         <div class="campaign__btn">
-          <a href="#" class="button">
+          <a href="/archive-campaign.html" class="button">
             <p>View more</p>
           </a>
         </div>
@@ -431,7 +431,7 @@
               </p>
             </div>
             <div class="about__btn">
-              <a href="#" class="button">
+              <a href="/page-about.html" class="button">
                 <p>View more</p>
               </a>
             </div>
@@ -462,7 +462,7 @@
                 正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。</p>
             </div>
             <div class="info__btn">
-              <a href="#" class="button">
+              <a href="/page-info.html" class="button">
                 <p>View more</p>
               </a>
             </div>
@@ -479,7 +479,7 @@
         </div>
         <div class="blog__cards blog-cards">
           <div class="blog-cards__card blog-card">
-            <a class="blog-card__link" href="#">
+            <a class="blog-card__link" href="/single.html">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_1.jpg" alt="ピンクの珊瑚礁の写真">
               </div>
@@ -496,7 +496,7 @@
             </a>
           </div>
           <div class="blog-cards__card blog-card">
-            <a class="blog-card__link" href="#">
+            <a class="blog-card__link" href="/single.html">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_2.jpg" alt="海亀が海中を泳いでいる様子">
               </div>
@@ -513,7 +513,7 @@
             </a>
           </div>
           <div class="blog-cards__card blog-card">
-            <a class="blog-card__link" href="#">
+            <a class="blog-card__link" href="/single.html">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_3.jpg" alt="イソギンチャクに隠れているカクレクマノミ">
               </div>
@@ -531,7 +531,7 @@
           </div>
         </div>
         <div class="blog__btn">
-          <a href="#" class="button">
+          <a href="/home.html" class="button">
             <p>View more</p>
           </a>
         </div>
@@ -607,7 +607,7 @@
           </div>
         </div>
         <div class="voice__btn ">
-          <a href="#" class="button">
+          <a href="/archive-voice.html" class="button">
             <p>View more</p>
           </a>
 
@@ -680,7 +680,7 @@
           </div>
         </div>
         <div class="price__btn">
-          <a href="#" class="button">
+          <a href="/page-price.html" class="button">
             <p>View more</p>
           </a>
         </div>
@@ -720,7 +720,7 @@
               </p>
             </div>
             <div class="contact__btn">
-              <a href="#" class="button">
+              <a href="/page-contact.html" class="button">
                 <p>Contact us</p>
               </a>
             </div>
@@ -745,12 +745,14 @@
         </div>
         <ul class="footer__sns-list">
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-facebook.svg" alt="フェイスブックのアイコン">
             </a>
           </li>
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-instagram.svg" alt="インスタグラムのアイコン">
             </a>
           </li>
@@ -773,19 +775,19 @@
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="/page-sub-about.html">私たちについて</a>
+                    <a href="/page-about.html">私たちについて</a>
                   </div>
                 </div>
               </div>
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="/page-sub-info.html">ダイビング情報</a>
+                    <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-sub-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-sub-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-sub-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html">ライセンス取得</a></li>
+                    <li><a href="/page-info.html">体験ダイビング</a></li>
+                    <li><a href="/page-info.html">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
