--- a/src/page-about.html
+++ b/src/page-about.html
@@ -40,7 +40,7 @@
   <header class="header">
     <div class="header__inner">
       <h1 class="header__logoBlock">
-        <a href="#" class="header__logoLink js-logoLink">
+        <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </h1>
@@ -57,34 +57,34 @@
                 <div class="menu__column">
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#campaign">キャンペーン</a>
+                      <a href="/archive-campaign.html">キャンペーン</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
-                      <li><a href="#">貸切体験ダイビング</a></li>
-                      <li><a href="#">ナイトダイビング</a></li>
+                      <li><a href="/archive-campaign.html">ライセンス取得</a></li>
+                      <li><a href="/archive-campaign.html">貸切体験ダイビング</a></li>
+                      <li><a href="/archive-campaign.html">ナイトダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#about">私たちについて</a>
+                      <a href="/page-about.html">私たちについて</a>
                     </div>
                   </div>
                 </div>
                 <div class="menu__column">
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#info">ダイビング情報</a>
+                      <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="#">ライセンス講習</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
+                      <li><a href="/page-info.html">ライセンス講習</a></li>
+                      <li><a href="/page-info.html">体験ダイビング</a></li>
+                      <li><a href="/page-info.html">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#blog">ブログ</a>
+                      <a href="/home.html">ブログ</a>
                     </div>
                   </div>
                 </div>
@@ -93,44 +93,44 @@
                 <div class="menu__column">
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#voice">お客様の声</a>
+                      <a href="/archive-voice.html">お客様の声</a>
                     </div>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#price">料金一覧</a>
+                      <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="#">ライセンス講習</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
+                      <li><a href="/page-price.html">ライセンス講習</a></li>
+                      <li><a href="/page-price.html">体験ダイビング</a></li>
+                      <li><a href="/page-price.html">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
                 <div class="menu__column">
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#">よくある質問</a>
+                      <a href="/page-faq.html">よくある質問</a>
                     </div>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#">プライバシー<br>ポリシー</a>
+                      <a href="/page-privacy.html">プライバシー<br>ポリシー</a>
                     </div>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#">利用規約</a>
+                      <a href="/page-terms-of-service.html">利用規約</a>
                     </div>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#contact">お問い合わせ</a>
+                      <a href="/page-contact.html">お問い合わせ</a>
                     </div>
                   </div>
                   <div class="menu__item">
                     <div class="menu__title">
-                      <a href="#contact">サイトマップ</a>
+                      <a href="/page-site-map.html">サイトマップ</a>
                     </div>
                   </div>
                 </div>
@@ -142,7 +142,7 @@
       <nav class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="/archive-campaign.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Campaign</p>
                 <p class="pc-nav__ja">キャンペーン</p>
@@ -150,7 +150,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#about">
+            <a href="/page-about.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">About us</p>
                 <p class="pc-nav__ja">私たちについて</p>
@@ -158,7 +158,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#info">
+            <a href="/page-info.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Information</p>
                 <p class="pc-nav__ja">ダイビング情報</p>
@@ -166,7 +166,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#blog">
+            <a href="/home.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Blog</p>
                 <p class="pc-nav__ja">ブログ</p>
@@ -174,7 +174,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#voice">
+            <a href="/archive-voice.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Voice</p>
                 <p class="pc-nav__ja">お客様の声</p>
@@ -182,7 +182,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">
+            <a href="/page-price.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Price</p>
                 <p class="pc-nav__ja">料金一覧</p>
@@ -190,7 +190,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#">
+            <a href="/page-faq.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">FAQ</p>
                 <p class="pc-nav__ja">よくある質問</p>
@@ -198,7 +198,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact">
+            <a href="/page-contact.html">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Contact</p>
                 <p class="pc-nav__ja">お問合せ</p>
@@ -350,18 +350,20 @@
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
-          <a href="#">
+          <a href="/">
             <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </div>
         <ul class="footer__sns-list">
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-facebook.svg" alt="フェイスブックのアイコン">
             </a>
           </li>
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-instagram.svg" alt="インスタグラムのアイコン">
             </a>
           </li>
@@ -374,34 +376,34 @@
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#campaign">キャンペーン</a>
+                    <a href="/archive-campaign.html">キャンペーン</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#">ライセンス取得</a></li>
-                    <li><a href="#">貸切体験ダイビング</a></li>
-                    <li><a href="#">ナイトダイビング</a></li>
+                    <li><a href="/archive-campaign.html">ライセンス取得</a></li>
+                    <li><a href="/archive-campaign.html">貸切体験ダイビング</a></li>
+                    <li><a href="/archive-campaign.html">ナイトダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#about">私たちについて</a>
+                    <a href="/page-about.html">私たちについて</a>
                   </div>
                 </div>
               </div>
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#info">ダイビング情報</a>
+                    <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#">ライセンス取得</a></li>
-                    <li><a href="#">体験ダイビング</a></li>
-                    <li><a href="#">ファンダイビング</a></li>
+                    <li><a href="/page-info.html">ライセンス取得</a></li>
+                    <li><a href="/page-info.html">体験ダイビング</a></li>
+                    <li><a href="/page-info.html">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#blog">ブログ</a>
+                    <a href="/home.html">ブログ</a>
                   </div>
                 </div>
               </div>
@@ -410,44 +412,44 @@
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#voice">お客様の声</a>
+                    <a href="/archive-voice.html">お客様の声</a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#price">料金一覧</a>
+                    <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#">ライセンス講習</a></li>
-                    <li><a href="#">体験ダイビング</a></li>
-                    <li><a href="#">ファンダイビング</a></li>
+                    <li><a href="/page-price.html">ライセンス講習</a></li>
+                    <li><a href="/page-price.html">体験ダイビング</a></li>
+                    <li><a href="/page-price.html">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#">よくある質問</a>
+                    <a href="/page-faq.html">よくある質問</a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                    <a href="/page-privacy.html">プライバシー<br class="u-mobile">ポリシー</a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#">利用規約</a>
+                    <a href="/page-terms-of-service.html">利用規約</a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#contact">お問い合わせ</a>
+                    <a href="/page-contact.html">お問い合わせ</a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#contact">サイトマップ</a>
+                    <a href="/page-site-map.html">サイトマップ</a>
                   </div>
                 </div>
               </div>
