fix：MVのswiperのクラスの付け方を変更

--- a/src/index.html
+++ b/src/index.html
@@ -229,26 +229,26 @@
         <div class="mv__content">
           <div class="mv__images">
             <div class="swiper mv__swiper js-mv-swiper">
-              <div class="swiper-wrapper mv__swiper-wrapper">
-                <div class="swiper-slide mv__swiper-img">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
                   <picture>
                     <source srcset="./assets/images/common/mv_pc_1.jpg" media="(min-width:768px)">
                     <img src="./assets/images/common/mv_sp_1.jpg" alt="大きな亀が海で泳いでいる様子">
                   </picture>
                 </div>
-                <div class="swiper-slide mv__swiper-img">
+                <div class="swiper-slide">
                   <picture>
                     <source srcset="./assets/images/common/mv_pc_2.jpg" media="(min-width:768px)">
                     <img src="./assets/images/common/mv_sp_2.jpg" alt="ダイバーと亀が水中で泳いでいる様子">
                   </picture>
                 </div>
-                <div class="swiper-slide mv__swiper-img">
+                <div class="swiper-slide">
                   <picture>
                     <source srcset="./assets/images/common/mv_pc_3.jpg" media="(min-width:768px)">
                     <img src="./assets/images/common/mv_sp_3.jpg" alt="海と山と空の風景">
                   </picture>
                 </div>
-                <div class="swiper-slide mv__swiper-img">
+                <div class="swiper-slide">
                   <picture>
                     <source srcset="./assets/images/common/mv_pc_4.jpg" media="(min-width:768px)">
                     <img src="./assets/images/common/mv_sp_4.jpg" alt="綺麗な砂浜と青空の風景">
