--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -294,7 +294,7 @@
       </div>
     </div>
 
-    <section class="contact layout-sub-contact">
+    <section class="contact layout-sub-contact layout-sub-contact--privacy">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
