fix：Blogアーカイブの調整、campaign-cardの修正

--- a/src/home.html
+++ b/src/home.html
@@ -491,19 +491,16 @@
                   </a>
                 </div>
               </div>
-              <!-- <div class="aside__content">
+              <div class="aside__content">
                 <div class="aside__title">
                   <h2>キャンペーン</h2>
                 </div>
                 <div class="aside__campaign-cards campaign-cards campaign-cards--sub-home">
-                  <div class="campaign-card campaign-card--sub-page">
+                  <div class="campaign-card campaign-card--home">
                     <div class="campaign-card__img">
                       <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
                     </div>
                     <div class="campaign-card__body">
-                      <div class="campaign-card__category">
-                        <p class="campaign-card__category-text">ライセンス講習</p>
-                      </div>
                       <div class="campaign-card__title under-line">
                         <p class="campaign-card__title-text text">ライセンス取得</p>
                       </div>
@@ -522,14 +519,11 @@
                       </div>
                     </div>
                   </div>
-                  <div class="campaign-card campaign-card--sub-page">
+                  <div class="campaign-card campaign-card--home">
                     <div class="campaign-card__img">
                       <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
                     </div>
                     <div class="campaign-card__body">
-                      <div class="campaign-card__category">
-                        <p class="campaign-card__category-text">体験ダイビング</p>
-                      </div>
                       <div class="campaign-card__title under-line">
                         <p class="campaign-card__title-text text">貸切体験ダイビング</p>
                       </div>
@@ -554,7 +548,7 @@
                     <p>Contact us</p>
                   </a>
                 </div>
-              </div> -->
+              </div>
               <div class="aside__content">
                 <div class="aside__title">
                   <h2>アーカイブ</h2>
@@ -577,32 +571,7 @@
                       <li><a href="#" class="toggle">9月</a></li>
                     </ul>
                   </li>
-                  <!-- その他の年を追加 -->
                 </ul>
-                <!-- <div class="aside__blog-archive blog-archive">
-                  <div class="blog-archive__year toggle is-active">
-                    <p>2023</p>
-                    <ul class="blog-archive__month-list">
-                      <li class="blog-archive__month toggle">
-                        <a href="#">3月</a>
-                      </li>
-                      <li class="blog-archive__month toggle">
-                        <a href="#">2月</a>
-                      </li>
-                      <li class="blog-archive__month toggle">
-                        <a href="#">1月</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="blog-archive__list toggle">
-                    <p>2022</p>
-                    <ul class="blog-archive__year">
-                      <li class="blog-archive__month">
-                        <a href="#">12月</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div> -->
               </div>
             </aside>
           </div>
